[sc-7592] Consistent naming
- Paragraph => Text block
- token (API context) => API key
- Remove some unused translations

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -58,7 +58,7 @@
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
 	"account.monthly_consumibles": "Monthly consumibles",
-	"account.new_token": "New Token",
+	"account.new_token": "New API key",
 	"account.nua_client": "Client name",
 	"account.nua_key_activity": "NU-API key activity log",
 	"account.nua_key_activity_subtitle": "Last 30 days Knowledge Box activity",
@@ -84,7 +84,7 @@
 	"account.stash.users": "Users management",
 	"account.threshold": "Consumption threshold",
 	"account.title": "Name",
-	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
+	"account.token_description": "<strong>Important!</strong> Copy and save the API key. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
 	"account.type.label": "Tier",
@@ -113,9 +113,6 @@
 	"activity.resource": "Resource",
 	"activity.search": "Queries",
 	"activity.timestamp": "Time stamp",
-	"autocomplete.section.main": "Key concept suggestion",
-	"autocomplete.section.next_words": "Suggested words",
-	"autocomplete.section.paragraph": "Suggested paragraph",
 	"billing.address": "Address",
 	"billing.already_available": "Already available",
 	"billing.amount": "Amount",
@@ -146,7 +143,7 @@
 	"billing.end-subscription": "End subscription",
 	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
-	"billing.extra_paragraphs_cost": "If the stored paragraph limit included is exceeded, we will charge {{price}} /stored paragraph.",
+	"billing.extra_paragraphs_cost": "If the stored text block limit included is exceeded, we will charge {{price}} / stored text block.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
 	"billing.features.boost": "Indexing booster",
@@ -169,7 +166,6 @@
 	"billing.history.title": "Account billing history",
 	"billing.hour": "hour",
 	"billing.hours": "hours",
-	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.ingestion_cost.title": "Ingestion costs",
 	"billing.invalid_address": "The address provided is not valid",
 	"billing.invalid_card": "We were unable to validate your card.",
@@ -181,12 +177,12 @@
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
 	"billing.order_number": "Order number",
-	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 paragraphs",
+	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocs",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
-	"billing.parameter.paragraphs": "How many stored paragraphs?",
-	"billing.parameter.paragraphs_processed": "How many processed paragraphs?",
+	"billing.parameter.paragraphs": "How many stored text blocs?",
+	"billing.parameter.paragraphs_processed": "How many processed text blocks?",
 	"billing.parameter.predict": "How many predicts?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
@@ -202,8 +198,8 @@
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of Knowledge Boxes",
 	"billing.quotas.media": "Video & audio indexing",
-	"billing.quotas.paragraphs": "Paragraph stored",
-	"billing.quotas.paragraphs_processed": "Number of paragraph",
+	"billing.quotas.paragraphs": "Text block stored",
+	"billing.quotas.paragraphs_processed": "Number of text blocks",
 	"billing.quotas.predict": "Predicts",
 	"billing.quotas.search_inference": "Search / Inference",
 	"billing.quotas.searches": "Searches",
@@ -298,7 +294,6 @@
 	"generic.all": "All",
 	"generic.allow": "Allow",
 	"generic.announce": "User information",
-	"generic.authentication_token": "Authentication token",
 	"generic.back": "Back",
 	"generic.back_to_accounts": "Back to Accounts",
 	"generic.back_to_home": "Back to Home Page",
@@ -402,7 +397,7 @@
 	"label-set.edit": "Edit label set",
 	"label-set.form.exclusive": "Exclusive label",
 	"label-set.form.exclusive-checkbox": "Add only one label by label set",
-	"label-set.form.exclusive-description": "By default, a resource/paragraph can have several labels from a same label set.",
+	"label-set.form.exclusive-description": "By default, a resource / text block can have several labels from a same label set.",
 	"label-set.form.kind": "Classification type",
 	"label-set.form.kind-warning": "This property cannot be modified afterward.",
 	"label-set.form.labels.duplicated-name": "Duplicated label name",
@@ -412,7 +407,7 @@
 	"label-set.form.name": "Label set name",
 	"label-set.form.name-invalid": "Invalid label set name",
 	"label-set.form.name-required": "Label set name is required",
-	"label-set.paragraphs": "Paragraphs",
+	"label-set.paragraphs": "Text blocks",
 	"label-set.resources": "Resources",
 	"label-set.selections": "Selections",
 	"label-set.subtitle": "Browse and edit label sets",
@@ -509,7 +504,7 @@
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.adding_labels": "Adding labels",
 	"resource.classification.clean-up": "Clean up label selection",
-	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
+	"resource.classification.no-paragraph-labelset": "There is no label set for text blocks. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.classification.remove-label": "Remove label from selection",
 	"resource.classification-column": "Classification",
@@ -557,14 +552,14 @@
 	"resource.field.update-successful": "Field updated successfully",
 	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
-	"resource.field-classification.help": "Choose a label and then select the paragraphs on which you want it to be applied",
+	"resource.field-classification.help": "Choose a label and then select the text blocks on which you want it to be applied",
 	"resource.field-conversation": "Conversation Field",
 	"resource.field-file": "File Field",
 	"resource.field-file-dropzone": "Drop your file here or click to select it",
 	"resource.field-file-dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
 	"resource.field-file-new-file": "New file:",
 	"resource.field-link": "Link Field",
-	"resource.field-no-paragraph": "No extracted paragraph for this field.",
+	"resource.field-no-paragraph": "No extracted text block for this field.",
 	"resource.field-text": "Text Field",
 	"resource.field-text-body-label": "Text body",
 	"resource.field-text-format-label": "Text format",
@@ -693,7 +688,7 @@
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
 	"stash.name_your_kb": "Name your KB",
-	"stash.new_service_access_token": "Create a new token",
+	"stash.new_service_access_token": "Create a new API key",
 	"stash.no_knowledge_boxes": "There are no Knowledge Boxes in this account",
 	"stash.preferences.receive_help": "Received help",
 	"stash.preferences.receiving_emails": "Email preferences",
@@ -711,13 +706,13 @@
 	"stash.seats_available": "{{ seats }} seats available",
 	"stash.see_stats": "See data",
 	"stash.service_access": "Service Access",
-	"stash.service_access_description": "Important! Copy and save the Token code. It will disappear once added.",
+	"stash.service_access_description": "Important! Copy and save the API key. It will disappear once added.",
 	"stash.settings.processes.classifier": "Label search intent training",
 	"stash.settings.processes.classifier_info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
 	"stash.settings.processes.ner": "Named Entities Recognition training",
 	"stash.settings.processes.ner_info": "In order to recognize your custom entities automatically, existing content has to be annotated with your custom entities. As more content is annotated, training will improve. You can create new custom entities from the Insights page.",
-	"stash.settings.processes.paragraph-labeler": "Automatic paragraphs label training",
-	"stash.settings.processes.paragraph-labeler_info": "In order to label paragraphs automatically, existing paragraphs have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
+	"stash.settings.processes.paragraph-labeler": "Automatic text blocks label training",
+	"stash.settings.processes.paragraph-labeler_info": "In order to label text blocks automatically, existing text blocks have to be labeled. As more content is labeled, training will improve. You can create new labels from the classification page.",
 	"stash.settings.processes.resource-labeler": "Automatic resource label training",
 	"stash.settings.processes.resource-labeler_info": "In order to label resources automatically, existing resources have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
@@ -824,13 +819,13 @@
 	"stash.widgets.targetNewTab.label": "Target new tab",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>Knowledge Box must be public</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private Knowledge Box you need to provide an API token.",
+	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private Knowledge Box you need to provide an API key.",
 	"stash.widgets.warning-dangerous-snippet-details": "Don't use this snippet on a public website.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Get started",
 	"stats.processing_time": "Processing time",
 	"stats.total.fields": "Fields",
-	"stats.total.paragraphs": "Paragraphs",
+	"stats.total.paragraphs": "Text blocks",
 	"stats.total.sentences": "Vectors",
 	"stats.total.title": "Resources",
 	"stats.total_search": "Total search operations",
