--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -58,7 +58,7 @@
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
 	"account.monthly_consumibles": "Consumo mensuales",
-	"account.new_token": "Nuevo Token",
+	"account.new_token": "Nueva clave API",
 	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "Actividad del Knowledge Box de los últimos 30 días",
@@ -83,7 +83,7 @@
 	"account.stash.users": "Gestión de usuarios",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
-	"account.token_description": "<strong>¡Importante!</strong> Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
+	"account.token_description": "<strong>¡Importante!</strong> Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
 	"account.type.label": "Nivel",
@@ -112,9 +112,6 @@
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
 	"activity.timestamp": "Sello de tiempo",
-	"autocomplete.section.main": "Palabras clave sugeridas",
-	"autocomplete.section.next_words": "Palabras sugeridas",
-	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
 	"billing.already_available": "Ya disponible",
 	"billing.amount": "Importe",
@@ -145,7 +142,7 @@
 	"billing.end-subscription": "Finalizar la suscripción",
 	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
-	"billing.extra_paragraphs_cost": "Si se excede el límite de párrafos almacenados, se cobrarà {{price}} por cada párrafo adicional.",
+	"billing.extra_paragraphs_cost": "Si se excede el límite de bloques de texto almacenado incluido, cobraremos {{price}} / bloque de texto almacenado.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
 	"billing.features.boost": "Refuerzo de indexación",
@@ -168,7 +165,6 @@
 	"billing.history.title": "Historial de facturación",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
-	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.ingestion_cost.title": "Costos de ingestión",
 	"billing.invalid_address": "La dirección proporcionada no es válida",
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
@@ -180,12 +176,12 @@
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
 	"billing.order_number": "Número de pedido",
-	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 párrafos",
+	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
-	"billing.parameter.paragraphs": "¿Cuántos párrafos almacenados?",
-	"billing.parameter.paragraphs_processed": "¿Cuantos parrafos procesados?",
+	"billing.parameter.paragraphs": "¿Cuántos bloques de texto almacenados?",
+	"billing.parameter.paragraphs_processed": "¿Cuántos bloques de texto procesados?",
 	"billing.parameter.predict": "¿Quantes predicciones?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
@@ -201,8 +197,8 @@
 	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexación de video y audio",
-	"billing.quotas.paragraphs": "Parrafos almacenados",
-	"billing.quotas.paragraphs_processed": "Número de parrafos",
+	"billing.quotas.paragraphs": "Bloque de texto almacenado",
+	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
 	"billing.quotas.predict": "Predicciones",
 	"billing.quotas.search_inference": "Búsqueda / Inferencia",
 	"billing.quotas.searches": "Búsquedas",
@@ -297,7 +293,6 @@
 	"generic.all": "Todos",
 	"generic.allow": "Permitir",
 	"generic.announce": "Informacion del usuario",
-	"generic.authentication_token": "Token de autenticación",
 	"generic.back": "Volver",
 	"generic.back_to_accounts": "Volver a Cuentas",
 	"generic.back_to_home": "Volver a la Home",
@@ -401,7 +396,7 @@
 	"label-set.edit": "Editar conjunto de etiquetas",
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Agregar solo una etiqueta por conjunto de etiquetas",
-	"label-set.form.exclusive-description": "Por defecto, un recurso/párrafo puede tener varias etiquetas de un mismo conjunto de etiquetas.",
+	"label-set.form.exclusive-description": "Por defecto, un recurso / bloque de texto puede tener varias etiquetas de un mismo conjunto de etiquetas.",
 	"label-set.form.kind": "Tipo de clasificación",
 	"label-set.form.kind-warning": "Esta propiedad no se puede modificar posteriormente.",
 	"label-set.form.labels.duplicated-name": "Nombre de etiqueta duplicado",
@@ -411,7 +406,7 @@
 	"label-set.form.name": "Nombre del conjunto de etiquetas",
 	"label-set.form.name-invalid": "Nombre de conjunto de etiquetas no válido",
 	"label-set.form.name-required": "El nombre del conjunto de etiquetas es obligatorio",
-	"label-set.paragraphs": "Párrafos",
+	"label-set.paragraphs": "Bloques de texto",
 	"label-set.resources": "Recursos",
 	"label-set.selections": "Selección",
 	"label-set.subtitle": "Examinar y editar conjuntos de etiquetas",
@@ -508,7 +503,7 @@
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.adding_labels": "Agregando etiquetas",
 	"resource.classification.clean-up": "Limpiar selección de etiquetas",
-	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
+	"resource.classification.no-paragraph-labelset": "No hay ninguna etiqueta establecida para los bloques de texto. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
 	"resource.classification-column": "Clasificación",
@@ -556,14 +551,14 @@
 	"resource.field.update-successful": "Campo actualizado con éxito",
 	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
 	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
-	"resource.field-classification.help": "Elija una etiqueta y luego seleccione los párrafos en los que desea que se aplique",
+	"resource.field-classification.help": "Elija una etiqueta y luego seleccione los bloques de texto en los que desea que se aplique",
 	"resource.field-conversation": "Campo de conversación",
 	"resource.field-file": "Campo de Archivo",
 	"resource.field-file-dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
 	"resource.field-file-dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
 	"resource.field-file-new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
-	"resource.field-no-paragraph": "No hay párrafo extraído para este campo.",
+	"resource.field-no-paragraph": "No hay bloque de texto extraído para este campo.",
 	"resource.field-text": "Campo de Texto",
 	"resource.field-text-body-label": "Cuerpo de texto",
 	"resource.field-text-format-label": "Formato de texto",
@@ -692,7 +687,7 @@
 	"stash.manage_users": "Gestionar usuarios",
 	"stash.name": "Nombre de la Knowledge Box",
 	"stash.name_your_kb": "Nombra tu base de conocimiento",
-	"stash.new_service_access_token": "Crear un nuevo token",
+	"stash.new_service_access_token": "Crear una nueva clave API",
 	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
 	"stash.preferences.receiving_emails": "Preferencias del correo electrónico",
@@ -710,13 +705,13 @@
 	"stash.seats_available": "Quedan {{ seats }} asientos",
 	"stash.see_stats": "Ver los datos",
 	"stash.service_access": "Service Access",
-	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
+	"stash.service_access_description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
 	"stash.settings.processes.classifier_info": "Para obtener sugerencias precisas de búsqueda de etiquetas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
 	"stash.settings.processes.ner": "Capacitación en reconocimiento de entidades nombradas",
 	"stash.settings.processes.ner_info": "Para reconocer sus entidades personalizadas automáticamente, el contenido existente debe anotarse con sus entidades personalizadas. A medida que se anota más contenido, la capacitación mejorará. Puede crear nuevas entidades personalizadas desde la página Insights.",
-	"stash.settings.processes.paragraph-labeler": "Entrenamiento automático de etiquetas de párrafo",
-	"stash.settings.processes.paragraph-labeler_info": "Para etiquetar párrafos automáticamente, los párrafos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.paragraph-labeler": "Entrenamiento automático de etiquetas de bloques de texto",
+	"stash.settings.processes.paragraph-labeler_info": "Para etiquetar bloques de texto automáticamente, es necesario etiquetar los bloques de texto existentes. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de clasificación.",
 	"stash.settings.processes.resource-labeler": "Entrenamiento automático de etiquetas de recursos",
 	"stash.settings.processes.resource-labeler_info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
 	"stash.settings.processes.training.active": "Hay un entrenamiento activo que puedes detener en cualquier momento. Recibirás un correo electrónico cuando esté completo.",
@@ -823,13 +818,13 @@
 	"stash.widgets.targetNewTab.label": "Apuntar a nueva pestaña",
 	"stash.widgets.title": "Generador de widgets de búsqueda",
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el Knowledge Box <strong>debe ser público</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un Knowledge Box privado, debe proporcionar un token de API.",
+	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un Knowledge Box privado, debe proporcionar una clave API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilice este fragmento en un sitio web público.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Empezar",
 	"stats.processing_time": "Tiempo de procesamiento",
 	"stats.total.fields": "Campos",
-	"stats.total.paragraphs": "Los párrafos",
+	"stats.total.paragraphs": "Bloques de texto",
 	"stats.total.sentences": "Vectores",
 	"stats.total.title": "Recursos",
 	"stats.total_search": "Total operaciones de búsqueda",
