--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -58,7 +58,7 @@
 	"account.manage": "Gérer le compte",
 	"account.manage_account_users": "Gestion des comptes utilisateurs",
 	"account.monthly_consumibles": "Consommables mensuels",
-	"account.new_token": "Nouveau jeton",
+	"account.new_token": "Nouvelle clé API",
 	"account.nua_client": "Nom du client",
 	"account.nua_key_activity": "Journal des activités clés de la NU-API",
 	"account.nua_key_activity_subtitle": "30 derniers jours d'activité de la Knowledge Box",
@@ -84,7 +84,7 @@
 	"account.stash.users": "Gestion des utilisateurs",
 	"account.threshold": "Seuil de consommation",
 	"account.title": "Nom",
-	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez le token. Il disparaîtra une fois ajouté.",
+	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"account.token_generation_warning": "Si vous générez une nouvelle clé, la clé actuelle sera désactivée et tous les travaux en cours seront perdus.",
 	"account.total_queries": "Nombre total de requêtes",
 	"account.type.label": "Niveau",
@@ -113,9 +113,6 @@
 	"activity.resource": "Ressource",
 	"activity.search": "Requêtes",
 	"activity.timestamp": "Horodatage",
-	"autocomplete.section.main": "Suggestion de concept clé",
-	"autocomplete.section.next_words": "Mots suggérés",
-	"autocomplete.section.paragraph": "Paragraphe suggéré",
 	"billing.address": "Adresse",
 	"billing.already_available": "Déjà disponible",
 	"billing.amount": "Montant",
@@ -146,7 +143,7 @@
 	"billing.end-subscription": "Mettre fin à l'abonnement",
 	"billing.enterprise_ready": "Nous sommes prêts pour l'entreprise",
 	"billing.estimate_cost": "Estimez votre coût",
-	"billing.extra_paragraphs_cost": "Si la limite de paragraphes stockés incluse est dépassée, nous facturerons {{price}} /paragraphe stocké.",
+	"billing.extra_paragraphs_cost": "Si la limite de blocs de texte stockés inclus est dépassée, nous facturerons {{price}} / bloc de texte stocké.",
 	"billing.features.anon": "Anonymisation des données",
 	"billing.features.apikey": "Clé API auto-hébergée",
 	"billing.features.boost": "Booster d’indexation",
@@ -169,7 +166,6 @@
 	"billing.history.title": "Historique de facturation du compte",
 	"billing.hour": "heure",
 	"billing.hours": "heures",
-	"billing.ingestion_cost.description": "Le calcul dépendra du nombre de paragraphes des documents téléchargés. Le calculateur de budget vous permettra d'établir un budget mensuel en fonction de vos besoins spécifiques.",
 	"billing.ingestion_cost.title": "Coûts d'ingestion",
 	"billing.invalid_address": "L'adresse fournie n'est pas valide",
 	"billing.invalid_card": "Nous n'avons pas pu valider votre carte.",
@@ -181,12 +177,12 @@
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
 	"billing.order_number": "Numéro de commande",
-	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 paragraphes",
+	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 blocs de texte",
 	"billing.parameter.files": "Combien de documents ?",
 	"billing.parameter.generative": "Combien de réponses génératives ?",
 	"billing.parameter.media": "Combien d'heures de vidéos/audios ?",
-	"billing.parameter.paragraphs": "Combien de paragraphes stockés ?",
-	"billing.parameter.paragraphs_processed": "Combien de paragraphes traités ?",
+	"billing.parameter.paragraphs": "Combien de blocs de texte stockés ?",
+	"billing.parameter.paragraphs_processed": "Combien de blocs de texte traités ?",
 	"billing.parameter.predict": "Combien de prédictions ?",
 	"billing.parameter.qa": "Combien de réponses génératives ?",
 	"billing.parameter.searches": "Combien de recherches ?",
@@ -202,8 +198,8 @@
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexation vidéo et audio",
-	"billing.quotas.paragraphs": "Paragraphe stocké",
-	"billing.quotas.paragraphs_processed": "Nombre de paragraphe",
+	"billing.quotas.paragraphs": "Bloc de texte stocké",
+	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
 	"billing.quotas.predict": "Prédictions",
 	"billing.quotas.search_inference": "Recherche / Inférence",
 	"billing.quotas.searches": "Recherches",
@@ -298,7 +294,6 @@
 	"generic.all": "Tous",
 	"generic.allow": "Autoriser",
 	"generic.announce": "Informations sur l'utilisateur",
-	"generic.authentication_token": "Jeton d'authentification",
 	"generic.back": "Retour",
 	"generic.back_to_accounts": "Retour aux comptes",
 	"generic.back_to_home": "Retour à la page d'accueil",
@@ -402,7 +397,7 @@
 	"label-set.edit": "Modifier le jeu d'étiquettes",
 	"label-set.form.exclusive": "Étiquette exclusive",
 	"label-set.form.exclusive-checkbox": "Ajouter une seule étiquette par jeu d'étiquettes",
-	"label-set.form.exclusive-description": "Par défaut, une ressource/paragraphe peut avoir plusieurs étiquettes provenant d’un même jeu d’étiquettes.",
+	"label-set.form.exclusive-description": "Par défaut, une ressource / un bloc de texte peut avoir plusieurs étiquettes issues d'un même jeu d'étiquettes.",
 	"label-set.form.kind": "Type de classement",
 	"label-set.form.kind-warning": "Cette propriété ne pourra plus être modifiée par la suite.",
 	"label-set.form.labels.duplicated-name": "Nom d'étiquette en double",
@@ -412,7 +407,7 @@
 	"label-set.form.name": "Nom du jeu d'étiquettes",
 	"label-set.form.name-invalid": "Nom du jeu d'étiquettes non valide",
 	"label-set.form.name-required": "Le nom du jeu d'étiquettes est obligatoire",
-	"label-set.paragraphs": "Paragraphes",
+	"label-set.paragraphs": "Blocs de texte",
 	"label-set.resources": "Ressources",
 	"label-set.selections": "Sélections",
 	"label-set.subtitle": "Parcourir et modifier des jeux d'étiquettes",
@@ -509,7 +504,7 @@
 	"resource.add_labels_success": "Libellés ajoutés avec succès sur {{count}}  ressources",
 	"resource.adding_labels": "Ajout d'étiquettes",
 	"resource.classification.clean-up": "Nettoyer la sélection d'étiquettes",
-	"resource.classification.no-paragraph-labelset": "Aucune étiquette n’est définie pour les paragraphes. Vous pouvez en ajouter",
+	"resource.classification.no-paragraph-labelset": "Aucune étiquette n’est définie pour les blocs de texte. Vous pouvez en ajouter",
 	"resource.classification.no-resource-labelset": "Aucune étiquette n’est définie pour les ressources. Vous pouvez en ajouter",
 	"resource.classification.remove-label": "Supprimer l'étiquette de la sélection",
 	"resource.classification-column": "Classification",
@@ -557,14 +552,14 @@
 	"resource.field.update-successful": "Champ mis à jour avec succès",
 	"resource.field-annotation.help": "Sélectionnez une famille pour mettre en évidence et annoter les entités correspondantes",
 	"resource.field-annotation.select-family-before": "Sélectionnez une famille pour pouvoir ajouter/modifier/supprimer des annotations",
-	"resource.field-classification.help": "Choisissez une étiquette puis sélectionnez les paragraphes sur lesquels vous souhaitez qu'elle soit appliquée",
+	"resource.field-classification.help": "Choisissez une étiquette puis sélectionnez les blocs de texte sur lesquels vous souhaitez qu'elle soit appliquée",
 	"resource.field-conversation": "Champ de conversation",
 	"resource.field-file": "Champ de fichier",
 	"resource.field-file-dropzone": "Déposez votre fichier ici ou cliquez pour le sélectionner",
 	"resource.field-file-dropzone-label": "Pour remplacer le fichier actuel <strong>{{filename}}</strong>, déposez votre fichier ou cliquez ci-dessous pour le sélectionner",
 	"resource.field-file-new-file": "Nouveau fichier:",
 	"resource.field-link": "Champ de lien",
-	"resource.field-no-paragraph": "Aucun paragraphe extrait pour ce champ.",
+	"resource.field-no-paragraph": "Aucun bloc de texte extrait pour ce champ.",
 	"resource.field-text": "Champ de texte",
 	"resource.field-text-body-label": "Corps du texte",
 	"resource.field-text-format-label": "Format texte",
@@ -693,7 +688,7 @@
 	"stash.manage_users": "Gérer les utilisateurs",
 	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Nommez votre base de connaissances",
-	"stash.new_service_access_token": "Créer un nouveau jeton",
+	"stash.new_service_access_token": "Créer une nouvelle clé API",
 	"stash.no_knowledge_boxes": "Il n'y a pas de Knowledge Boxes dans ce compte",
 	"stash.preferences.receive_help": "Reçu de l'aide",
 	"stash.preferences.receiving_emails": "Préférences de messagerie",
@@ -711,13 +706,13 @@
 	"stash.seats_available": "{{ seats }}  places disponibles",
 	"stash.see_stats": "Voir les données",
 	"stash.service_access": "Accès aux services",
-	"stash.service_access_description": "Important! Copiez et enregistrez le code du jeton. Il disparaîtra une fois ajouté.",
+	"stash.service_access_description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"stash.settings.processes.classifier": "Formation sur l'intention de recherche d'étiquettes",
 	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
 	"stash.settings.processes.ner": "Formation sur la reconnaissance des entités nommées",
 	"stash.settings.processes.ner_info": "Afin de reconnaître automatiquement vos entités personnalisées, le contenu existant doit être annoté avec vos entités personnalisées. Au fur et à mesure que davantage de contenu sera annoté, la formation s’améliorera. Vous pouvez créer de nouvelles entités personnalisées à partir de la page Insights.",
-	"stash.settings.processes.paragraph-labeler": "Formation automatique aux étiquettes de paragraphes",
-	"stash.settings.processes.paragraph-labeler_info": "Afin d'étiqueter automatiquement les paragraphes, les paragraphes existants doivent être étiquetés. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
+	"stash.settings.processes.paragraph-labeler": "Formation automatique aux étiquettes des blocs de texte",
+	"stash.settings.processes.paragraph-labeler_info": "Afin d'étiqueter automatiquement les blocs de texte, les blocs de texte existants doivent être étiquetés. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page de classification.",
 	"stash.settings.processes.resource-labeler": "Formation automatique aux étiquettes de ressources",
 	"stash.settings.processes.resource-labeler_info": "Afin d'étiqueter automatiquement les ressources, les ressources existantes doivent être étiquetées. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
 	"stash.settings.processes.training.active": "Il existe un entraînement actif que vous pouvez arrêter à tout moment. Vous recevrez un e-mail une fois celui-ci terminé.",
@@ -824,13 +819,13 @@
 	"stash.widgets.targetNewTab.label": "Cibler un nouvel onglet",
 	"stash.widgets.title": "Générateur de widgets de recherche",
 	"stash.widgets.warning": "Pour que le widget fonctionne correctement, la Knowledge Box <strong>doit être publique</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zone dangereuse ! Pour que ce widget fonctionne avec une Knowledge Box privée, vous devez fournir un jeton API.",
+	"stash.widgets.warning-dangerous-snippet": "Zone dangereuse ! Pour que ce widget fonctionne avec une Knowledge Box privée, vous devez fournir une clé API.",
 	"stash.widgets.warning-dangerous-snippet-details": "N'utilisez pas cet extrait sur un site Web public.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Commencer",
 	"stats.processing_time": "Temps de traitement",
 	"stats.total.fields": "Champs",
-	"stats.total.paragraphs": "Paragraphes",
+	"stats.total.paragraphs": "Blocs de texte",
 	"stats.total.sentences": "Vecteurs",
 	"stats.total.title": "Ressources",
 	"stats.total_search": "Nombre total de recherches",
