--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -58,7 +58,7 @@
 	"account.manage": "Gerenciar conta",
 	"account.manage_account_users": "Gerenciamento de usuários da conta",
 	"account.monthly_consumibles": "Consumíveis mensais",
-	"account.new_token": "Novo token",
+	"account.new_token": "Nova chave de API",
 	"account.nua_client": "Nome do cliente",
 	"account.nua_key_activity": "Registro de atividades da chave NU-API",
 	"account.nua_key_activity_subtitle": "Atividade da Knowledge Box dos últimos 30 dias",
@@ -84,7 +84,7 @@
 	"account.stash.users": "Gerenciamento de Usuários",
 	"account.threshold": "Limite de consumo",
 	"account.title": "Nome",
-	"account.token_description": "<strong>Importante!</strong> Copie e salve o código do token. Ele desaparecerá depois de adicionado.",
+	"account.token_description": "<strong>Importante!</strong> Copie e salve a chave de API. Ele desaparecerá depois de adicionado.",
 	"account.token_generation_warning": "Se você gerar uma nova chave, a chave atual será desativada e todos os trabalhos em andamento serão perdidos",
 	"account.total_queries": "Número total de consultas",
 	"account.type.label": "Camada",
@@ -113,9 +113,6 @@
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
 	"activity.timestamp": "Carimbo de hora",
-	"autocomplete.section.main": "Sugestão de conceito-chave",
-	"autocomplete.section.next_words": "Palavras sugeridas",
-	"autocomplete.section.paragraph": "Parágrafo sugerido",
 	"billing.address": "Endereço",
 	"billing.already_available": "Já disponível",
 	"billing.amount": "Montante",
@@ -146,7 +143,7 @@
 	"billing.end-subscription": "Encerrar assinatura",
 	"billing.enterprise_ready": "Estamos prontos para a empresa",
 	"billing.estimate_cost": "Estime seu custo",
-	"billing.extra_paragraphs_cost": "Se o limite de parágrafos armazenados incluído for excedido, cobraremos {{price}} /parágrafo armazenado.",
+	"billing.extra_paragraphs_cost": "Se o limite de bloco de texto armazenado incluído for excedido, cobraremos {{price}} / bloco de texto armazenado.",
 	"billing.features.anon": "Anonimização de dados",
 	"billing.features.apikey": "Chave de API auto-hospedada",
 	"billing.features.boost": "Reforço de indexação",
@@ -169,7 +166,6 @@
 	"billing.history.title": "Histórico de faturamento da conta",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
-	"billing.ingestion_cost.description": "O cálculo dependerá do número de parágrafos dos documentos carregados. A calculadora de orçamento permitirá que você faça um orçamento mensal com base em suas necessidades específicas.",
 	"billing.ingestion_cost.title": "Custos de ingestão",
 	"billing.invalid_address": "O endereço fornecido não é válido",
 	"billing.invalid_card": "Não foi possível validar seu cartão.",
@@ -181,12 +177,12 @@
 	"billing.next-payment": "Próximo pagamento",
 	"billing.not_company": "Eu não sou uma empresa",
 	"billing.order_number": "Número do pedido",
-	"billing.paragraphs_per_file": "Um arquivo de texto de 10 páginas contém aproximadamente 300 parágrafos",
+	"billing.paragraphs_per_file": "Um arquivo de texto de 10 páginas contém aproximadamente 300 blocos de texto",
 	"billing.parameter.files": "Quantos documentos?",
 	"billing.parameter.generative": "Quantas respostas generativas?",
 	"billing.parameter.media": "Quantas horas de vídeos/áudios?",
-	"billing.parameter.paragraphs": "Quantos parágrafos armazenados?",
-	"billing.parameter.paragraphs_processed": "Quantos parágrafos processados?",
+	"billing.parameter.paragraphs": "Quantos blocos de texto armazenados?",
+	"billing.parameter.paragraphs_processed": "Quantos blocos de texto processados?",
 	"billing.parameter.predict": "Quantas previsões?",
 	"billing.parameter.qa": "Quantas respostas generativas?",
 	"billing.parameter.searches": "Quantas pesquisas?",
@@ -202,8 +198,8 @@
 	"billing.quotas.ingestion": "Ingestão",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexação de vídeo e áudio",
-	"billing.quotas.paragraphs": "Parágrafo armazenado",
-	"billing.quotas.paragraphs_processed": "Número do parágrafo",
+	"billing.quotas.paragraphs": "Bloco de texto armazenado",
+	"billing.quotas.paragraphs_processed": "Número de blocos de texto",
 	"billing.quotas.predict": "Prevê",
 	"billing.quotas.search_inference": "Pesquisa / Inferência",
 	"billing.quotas.searches": "Pesquisas",
@@ -298,7 +294,6 @@
 	"generic.all": "Todos",
 	"generic.allow": "Permitir",
 	"generic.announce": "Informação do usuário",
-	"generic.authentication_token": "Token de autenticação",
 	"generic.back": "De volta",
 	"generic.back_to_accounts": "Voltar para contas",
 	"generic.back_to_home": "Voltar à página inicial",
@@ -402,7 +397,7 @@
 	"label-set.edit": "Editar conjunto de rótulos",
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Adicione apenas um rótulo por conjunto de rótulos",
-	"label-set.form.exclusive-description": "Por padrão, um recurso/parágrafo pode ter vários rótulos de um mesmo conjunto de rótulos.",
+	"label-set.form.exclusive-description": "Por padrão, um recurso / bloco de texto pode ter vários rótulos de um mesmo conjunto de rótulos.",
 	"label-set.form.kind": "Tipo de Classificação",
 	"label-set.form.kind-warning": "Esta propriedade não pode ser modificada posteriormente.",
 	"label-set.form.labels.duplicated-name": "Nome do rótulo duplicado",
@@ -412,7 +407,7 @@
 	"label-set.form.name": "Nome do conjunto de rótulos",
 	"label-set.form.name-invalid": "Nome do conjunto de rótulos inválido",
 	"label-set.form.name-required": "O nome do conjunto de rótulos é obrigatório",
-	"label-set.paragraphs": "Parágrafos",
+	"label-set.paragraphs": "Blocos de texto",
 	"label-set.resources": "Recursos",
 	"label-set.selections": "Seleções",
 	"label-set.subtitle": "Navegue e edite conjuntos de rótulos",
@@ -509,7 +504,7 @@
 	"resource.add_labels_success": "Rótulos adicionados com sucesso em {{count}} recursos",
 	"resource.adding_labels": "Adicionando rótulos",
 	"resource.classification.clean-up": "Limpar seleção de rótulo",
-	"resource.classification.no-paragraph-labelset": "Não há rótulo definido para parágrafos. Você pode adicionar alguns",
+	"resource.classification.no-paragraph-labelset": "Não há rótulo definido para blocos de texto. Você pode adicionar alguns",
 	"resource.classification.no-resource-labelset": "Não há rótulo definido para recursos. Você pode adicionar alguns",
 	"resource.classification.remove-label": "Remover rótulo da seleção",
 	"resource.classification-column": "Classificação",
@@ -557,14 +552,14 @@
 	"resource.field.update-successful": "Campo atualizado com sucesso",
 	"resource.field-annotation.help": "Selecione uma família para destacar e anotar as entidades correspondentes",
 	"resource.field-annotation.select-family-before": "Selecione uma família para poder adicionar/editar/remover anotações",
-	"resource.field-classification.help": "Escolha um rótulo e selecione os parágrafos nos quais deseja que ele seja aplicado",
+	"resource.field-classification.help": "Escolha um rótulo e selecione os blocos de texto nos quais deseja que ele seja aplicado",
 	"resource.field-conversation": "Campo de conversa",
 	"resource.field-file": "Campo de arquivo",
 	"resource.field-file-dropzone": "Solte seu arquivo aqui ou clique para selecioná-lo",
 	"resource.field-file-dropzone-label": "Para substituir o arquivo atual <strong>{{filename}}</strong>, solte seu arquivo ou clique abaixo para selecioná-lo",
 	"resource.field-file-new-file": "Novo arquivo:",
 	"resource.field-link": "Campo de link",
-	"resource.field-no-paragraph": "Nenhum parágrafo extraído para este campo.",
+	"resource.field-no-paragraph": "Nenhum bloco de texto extraído para este campo.",
 	"resource.field-text": "Campo de texto",
 	"resource.field-text-body-label": "Corpo do Texto",
 	"resource.field-text-format-label": "Formato de texto",
@@ -693,7 +688,7 @@
 	"stash.manage_users": "Gerenciar usuários",
 	"stash.name": "Nome da Knowledge Box",
 	"stash.name_your_kb": "Nomeie sua base de conhecimento",
-	"stash.new_service_access_token": "Crie um novo token",
+	"stash.new_service_access_token": "Crie uma nova chave de API",
 	"stash.no_knowledge_boxes": "Não há Knowledge Boxes nesta conta",
 	"stash.preferences.receive_help": "Ajuda recebida",
 	"stash.preferences.receiving_emails": "Preferências de Email",
@@ -711,13 +706,13 @@
 	"stash.seats_available": "{{ seats }} assentos disponíveis",
 	"stash.see_stats": "Ver dados",
 	"stash.service_access": "Acesso ao serviço",
-	"stash.service_access_description": "Importante! Copie e salve o código do token. Ele desaparecerá depois de adicionado.",
+	"stash.service_access_description": "Importante! Copie e salve a chave API. Ele desaparecerá depois de adicionado.",
 	"stash.settings.processes.classifier": "Treinamento de intenção de pesquisa de rótulo",
 	"stash.settings.processes.classifier_info": "Para obter sugestões precisas de pesquisa de rótulos, o conteúdo existente deve ser rotulado. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
 	"stash.settings.processes.ner": "Treinamento de reconhecimento de entidades nomeadas",
 	"stash.settings.processes.ner_info": "Para reconhecer automaticamente suas entidades personalizadas, o conteúdo existente deve ser anotado com suas entidades personalizadas. À medida que mais conteúdo for anotado, o treinamento melhorará. Você pode criar novas entidades personalizadas na página Insights.",
-	"stash.settings.processes.paragraph-labeler": "Treinamento automático de rótulos de parágrafos",
-	"stash.settings.processes.paragraph-labeler_info": "Para rotular os parágrafos automaticamente, os parágrafos existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
+	"stash.settings.processes.paragraph-labeler": "Treinamento automático de rótulos de blocos de texto",
+	"stash.settings.processes.paragraph-labeler_info": "Para rotular blocos de texto automaticamente, os blocos de texto existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos na página de classificação.",
 	"stash.settings.processes.resource-labeler": "Treinamento automático de rótulos de recursos",
 	"stash.settings.processes.resource-labeler_info": "Para rotular os recursos automaticamente, os recursos existentes devem ser rotulados. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
 	"stash.settings.processes.training.active": "Existe um treinamento ativo que você pode interromper a qualquer momento. Você receberá um e-mail quando estiver concluído.",
@@ -824,13 +819,13 @@
 	"stash.widgets.targetNewTab.label": "Segmentar nova guia",
 	"stash.widgets.title": "Gerador de widget de pesquisa",
 	"stash.widgets.warning": "Para que o widget funcione corretamente, a Knowledge Box <strong>deve ser pública</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perigosa! Para que este widget funcione com uma Knowledge Box privada, você precisa fornecer um token de API.",
+	"stash.widgets.warning-dangerous-snippet": "Zona perigosa! Para que este widget funcione com uma Knowledge Box privada, você precisa fornecer uma chave de API.",
 	"stash.widgets.warning-dangerous-snippet-details": "Não use este snippet em um site público.",
 	"stats.endpoint": "Endpoint da API NucliaDB",
 	"stats.get_started": "Iniciar",
 	"stats.processing_time": "Tempo de processamento",
 	"stats.total.fields": "Campos",
-	"stats.total.paragraphs": "Parágrafos",
+	"stats.total.paragraphs": "Blocos de texto",
 	"stats.total.sentences": "Vetores",
 	"stats.total.title": "Recursos",
 	"stats.total_search": "Total de operações de pesquisa",
