--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -39,7 +39,7 @@
 	"login.signup": "Registra't!",
 	"login.subtitle": "Oferint les respostes adequades a partir de les vostres dades internes.",
 	"login.title": "Benvinguts a Nuclia",
-	"login.token_expired": "El token ha caducat",
+	"login.token_expired": "El testimoni ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
 	"login.wrong_email": "Correu electrònic incorrecte?",
 	"onboarding.account_creation": "Creació del compte...",
