--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -39,7 +39,7 @@
 	"login.signup": "S'inscrire",
 	"login.subtitle": "Fournir les bonnes réponses à partir de vos données internes.",
 	"login.title": "Bienvenue à Nuclia",
-	"login.token_expired": "Le token a expiré",
+	"login.token_expired": "Le jeton a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
 	"login.wrong_email": "Email incorrect ?",
 	"onboarding.account_creation": "Création du compte...",
